# concurrentes_tp1

./: .gitignore  .gitignore~  CMakeLists.txt  LICENSE  README.md
aux/: log.txt
src/: Cadete.cpp  Cadete.h  Caja.cpp  Caja.h  Cocinero.cpp  Cocinero.h  Configuracion.cpp  Configuracion.h  GeneradorLlamados.cpp  GeneradorLlamados.h  Horno.cpp  Horno.h  Logger.cpp  Logger.h  Pizzeria.cpp  Pizzeria.h  Proceso.cpp  Proceso.h  Recepcionista.cpp  Recepcionista.h  Supervisora.cpp  Supervisora.h  Zappi.cpp  Zappi.h  ZappiFactory.cpp  ZappiFactory.h  concurrentes_tp1.cpp
src/structures/: MemoriaCompartida.h  SIGINT_Handler.h  Semaforo.cpp  Semaforo.h
